[metadata]
name = rfexplorer
version = 0.0.1
description = Package to communicate with a RFExplorer
long_description = file: README.md
author = bopaqiun
license = MIT License
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
requires =
    pyserial

[options]
packages = find:
python_requires = >=3.10